--- a/src/styles/NavBar.module.css
+++ b/src/styles/NavBar.module.css
@@ -1,9 +1,29 @@
 .NavBar {
-    background: #ffffff;
-    border: 1px solid #dadadf;
-    box-shadow: inset 0px 0px 62px -20px #00fa4b;
-  }
-  
-  .NavBar:hover {
-    box-shadow: inset 0px 0px 62px -20px #8224e5;
-  }
+  background: #ffffff;
+  border: 1px solid #dadadf;
+  box-shadow: inset 0px 0px 62px -20px #00fa4b;
+}
+
+.NavBar:hover {
+  box-shadow: inset 0px 0px 62px -20px #8224e5;
+}
+
+.Logo {
+    font-size: 2rem;
+    font-weight: 700;
+    letter-spacing: 1.1;
+    font-style: italic;
+}
+
+.Logo span {
+    color: #f78215;
+}
+
+.NavLink {
+padding: .4rem;
+color: #000;
+}
+
+.Active, .Active i {
+    color: #8224e5;
+}
