--- a/src/styles/SignInUpForm.module.css
+++ b/src/styles/SignInUpForm.module.css
@@ -27,3 +27,12 @@
     object-fit: contain;
     max-width: 100%;
   }
+
+  .Input {
+    border: 1px solid #f78215bd;
+  }
+
+  .Input:focus {
+    border: 1px solid #8224e5;
+    box-shadow: 1px 1px 1px #8224e5;
+  }
