--- a/src/App.module.css
+++ b/src/App.module.css
@@ -24,3 +24,19 @@ a:hover i {
   text-decoration: none;
   color: #f78215;
 }
+
+input[type="file"] {
+  display: none;
+}
+
+.Content {
+  background-color: #ffffff;
+  padding: 10px;
+  border-radius: 2px;
+  border: 1px solid #dadadf;
+  box-shadow: inset 0px 0px 62px -20px #00fa4b;
+}
+
+.Content:hover {
+  box-shadow: inset 0px 0px 62px -20px #8224e5;
+}
