--- a/src/styles/SignInUpForm.module.css
+++ b/src/styles/SignInUpForm.module.css
@@ -1,18 +1,22 @@
 .SignUpInPicture {
-    object-fit: contain;
-    max-width: 100%;
-  }
+  object-fit: contain;
+  max-width: 100%;
+}
 
-  .Input {
-    border: 1px solid #f78215bd;
-  }
+.Input {
+  border: 1px solid #f78215bd;
+}
 
-  .Input:focus {
-    border: 1px solid #8224e5;
-    box-shadow: 1px 1px 1px #8224e5;
-  }
+.Input:focus {
+  border: 1px solid #8224e5;
+  box-shadow: 1px 1px 1px #8224e5;
+}
 
-
+.LinkSpecial {
+  color: #8224e5;
+  font-weight: 700;
+  margin: 0 .2rem;
+}
 
 .SignFormRow {
   max-width: 30rem;
@@ -20,7 +24,6 @@
   border: 1px dotted #f78215;
   padding: 1rem;
   margin: 2rem auto;
-
 }
 
 .SignFormRow:hover {
@@ -31,12 +34,10 @@
 }
 
 @keyframes changeBorderColor {
-    from {
-      border: 1px dotted #8124e5b9;
-    }
-    to {
-    border: 1px dotted #f78215bd;
-    }
+  from {
+    border: 1px dotted #8124e5b9;
   }
-
-  
+  to {
+    border: 1px dotted #f78215bd;
+  }
+}
