--- a/src/App.module.css
+++ b/src/App.module.css
@@ -46,3 +46,15 @@ input[type="file"] {
   max-width: 100%;
   object-fit: contain;
 }
+
+i {
+  color: #363636;
+  font-size: 1.6rem;
+  padding: 7px;
+  vertical-align: middle;
+}
+
+i:hover {
+  cursor: pointer;
+  transition: color ease-in-out 0.3s;
+}
