--- a/src/styles/ProfilePage.module.css
+++ b/src/styles/ProfilePage.module.css
@@ -50,3 +50,24 @@
 .Card:hover .Front {
   transform: rotateY(-180deg);
 }
+
+.Content {
+    flex-grow: 4;
+    text-align: center;
+    margin: 10px 0;
+  }
+
+  .ProfileImage {
+    object-fit: cover;
+    height: 120px;
+    width: 120px;
+    margin: 4px;
+  }
+
+
+@media screen and (max-width: 991px) {
+    .ProfileImage {
+      width: 250px;
+      height: 250px;
+    }
+  }
