--- a/src/styles/Button.module.css
+++ b/src/styles/Button.module.css
@@ -47,3 +47,73 @@
   background: #079531 !important;
   scale: 1.05;
 }
+
+.Follow {
+  background: #8224e5;
+  position: relative;
+  overflow: hidden;
+}
+
+.Follow:hover,
+.Follow:hover:active,
+.Follow:active,
+.Follow:focus {
+  background: #8224e5 !important;
+  border: 2px solid #f78215;
+}
+
+.Follow::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: -100%;
+  width: 100%;
+  height: 100%;
+  background: linear-gradient(
+    120deg,
+    transparent,
+    #f782156e,
+    transparent,
+    transparent
+  );
+  transition: all 750ms;
+}
+
+.Follow:hover:before {
+  left: 100%;
+}
+
+.Unfollow {
+  background: #f78215;
+  position: relative;
+  overflow: hidden;
+}
+
+.Unfollow:hover,
+.Unfollow:hover:active,
+.Unfollow:active,
+.Unfollow:focus {
+  background: #f78215 !important;
+  border: 2px solid #8224e5;
+}
+
+.Unfollow::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: -100%;
+  width: 100%;
+  height: 100%;
+  background: linear-gradient(
+    120deg,
+    transparent,
+    #8124e573,
+    transparent,
+    transparent
+  );
+  transition: all 750ms;
+}
+
+.Unfollow:hover:before {
+  left: 100%;
+}
