Add special styles to WallPostsButton use in ProfilePage component

--- a/src/styles/Button.module.css
+++ b/src/styles/Button.module.css
@@ -117,3 +117,21 @@
 .Unfollow:hover:before {
   left: 100%;
 }
+
+.Wide {
+  width: 100%;
+}
+
+.WallPostsButton {
+  background: #8224e5;
+}
+
+.WallPostsButton:hover {
+  background: #f78215 !important;
+}
+
+.WallPostsButton:active,
+.WallPostsButton:focus {
+  background: #8224e5 !important;
+  opacity: .9;
+}
