--- a/src/App.module.css
+++ b/src/App.module.css
@@ -57,3 +57,16 @@ i:hover {
   cursor: pointer;
   transition: color ease-in-out 0.3s;
 }
+
+@media screen and (max-width: 504px) {
+  .MainContainer {
+    padding-top: 7.8rem;
+  }
+}
+
+
+@media screen and (max-width: 333px) {
+  .MainContainer {
+    padding-top: 8.5rem;
+  }
+}
