--- a/src/styles/Button.module.css
+++ b/src/styles/Button.module.css
@@ -32,7 +32,7 @@
 }
 
 .CommentButton:hover {
-  scale: 1.05;
+  transform: scale(1.05);
   color: #fff;
 }
 
@@ -45,7 +45,7 @@
 .SaveButton:active,
 .SaveButton:focus {
   background: #079531 !important;
-  scale: 1.05;
+  transform: scale(1.05);
 }
 
 .Follow {
