--- a/src/styles/Button.module.css
+++ b/src/styles/Button.module.css
@@ -26,6 +26,7 @@
 .Main:active,
 .Main:focus {
   background: #f78215 !important;
+  color: #030230;
 }
 
 .CommentButton {
@@ -34,12 +35,13 @@
 }
 
 .CommentButton:hover {
-  transform: scale(1.05);
+  border: 1px solid #030230;
   color: #030230;
 }
 
 .SaveButton {
   background: #02be3a;
+  color: #030230;
 }
 
 .SaveButton:hover,
@@ -47,7 +49,8 @@
 .SaveButton:active,
 .SaveButton:focus {
   background: #079531 !important;
-  transform: scale(1.05);
+  color: #030230;
+  border: 1px solid #030230;
 }
 
 .Follow {
